Bug 166567 - OSD is not translucent
Summary: OSD is not translucent
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-14 21:16 UTC by Colin Guthrie
Modified: 2008-08-07 09:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Colin Guthrie 2008-07-14 21:16:35 UTC
Version:           2.0 (using Devel)
Installed from:    Compiled sources
OS:                Linux

Regardless of the whether the option was chosen in the settings, I cannot get a translucent OSD. This is using a recent snapshot of amarok and of compiz (rather than kwin).
Comment 1 Mark Kretschmann 2008-07-15 21:53:31 UTC
Yes, this seems to be a problem with NVidia cards/drivers. Translucency only works if set to 0.5. Anything else between 0.0 and 1.0 doesn't really work.

We'll have to investigate.
Comment 2 Colin Guthrie 2008-07-16 10:18:21 UTC
FWIW, I'm on Intel... and also I cannot see where to change the translucency to 0.5... Not poked in code yet but is this a constant I'd have to change there or am I missing something obvious?
Comment 3 Maarten Wisse 2008-07-16 21:52:44 UTC
confirmed. I'm on Intel as well. No translucency and it cannot be configured yet.
Comment 4 Mark Kretschmann 2008-08-07 09:25:28 UTC
SVN commit 843404 by markey:

Make the OSD translucency actually work. (minus a bug that amarok needs a restart for it to take affect -> TODO)

BUG: 166567


 M  +3 -1      Osd.cpp  
 M  +2 -0      Osd.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=843404