Make the OSD translucency actually work. (minus a bug that amarok needs a restart for it to take affect -> TODO)

BUG: 166567

svn path=/trunk/extragear/multimedia/amarok/; revision=843404