src/Osd.h
@@ -75,6 +75,7 @@ class OSDWidget : public QWidget
         void setText( const QString &text ) { m_text = text; }
         void setDrawShadow( const bool b ) { m_drawShadow = b; }
         void setRating( const short rating ) { if ( isEnabled() ) m_rating = rating; }
+        void setTranslucent( bool enabled ) { setWindowOpacity( enabled ? 0.7 : 1.0 ); }
 
     protected:
         virtual ~OSDWidget();
@@ -136,6 +137,7 @@ public slots:
             unsetColors();
         doUpdate();
     }
+    void setTranslucent( bool enabled ) { setWindowOpacity( enabled ? 0.7 : 1.0 ); doUpdate(); }
 
 private:
     inline void doUpdate() { if( !isHidden() ) show(); }
